# remembrance

./: .gitignore  LICENSE  README.md  pyproject.toml
integrations/claude-code/: README.md  capture_transcript.py  inject_context.py  remembrance_mcp_stdio.cmd  settings.snippet.json
integrations/codex/: README.md  capture_turn.py  hooks.json  recall_session.py
integrations/windows/: start_remembrance_rest.ps1  start_remembrance_rest.vbs
scripts/: download-dilbert.sh
src/memory_mcp_server/: __init__.py  config.py  extract.py  gate.py  pipeline.py  server.py  store.py
src/rememberance_mcp/: __init__.py  __main__.py  config.py  gate_backends.py  nats_sub.py  pipeline.py  registry.py  serve.py  server.py
src/rememberance_mcp/api/: __main__.py  rest.py
src/rememberance_mcp/dream/: __init__.py  cycle.py
src/rememberance_mcp/extract/: __init__.py  extract.py
src/rememberance_mcp/gate/: __init__.py  gate.py  ollama.py
src/rememberance_mcp/graph/: __init__.py  edges.py  entity.py  traversal.py
src/rememberance_mcp/search/: __init__.py  hybrid.py
src/rememberance_mcp/store/: __init__.py  edges.py  facts.py  markdown.py  memory.py  store.py
src/remembrance_mcp/: __init__.py  __main__.py  gate_backends.py  nats_sub.py  pipeline.py  registry.py  serve.py  server.py
src/remembrance_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/remembrance_mcp/api/: __init__.py  __main__.py  rest.py
src/remembrance_mcp/dream/: cycle.py
src/remembrance_mcp/enrichment/: __init__.py
src/remembrance_mcp/extract/: __init__.py
src/remembrance_mcp/gate/: __init__.py  gate.py  ollama.py
src/remembrance_mcp/graph/: edges.py  entity.py  traversal.py
src/remembrance_mcp/search/: __init__.py  hybrid.py
src/remembrance_mcp/store/: __init__.py  markdown.py
tests/: test_entity_detection.py  test_entity_store.py  test_fact_store.py  test_hybrid_search.py  test_integration.py  test_markdown_sync.py  test_mcp_server.py  test_ollama_gate.py  test_prism_compat.py  test_rest_api.py  test_rrf_edge_cases.py
