[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rememberance-mcp"
version = "2.0.0"
description = "Universal memory system for AI agents — knowledge graph, compiled truth, dream cycle"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

[project.optional-dependencies]
nats = ["nats-py>=2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]